rotate fix. also debugging the emoji not showing

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ input[type="range"]::-webkit-slider-thumb {
     height: 30px;
     width: 30px;
     background-image: url("assets/moneysign.jpeg");
+    background-size: cover;
     border-radius: 50%;
     border: none;
     transition: .2s ease-in-out;
